--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pypika-stubs"
-version = "0.48.0"
+version = "0.48.0a0"
 description = "pypika typing stubs"
 authors = [
     { name = "trim21", email = "trim21me@gmail.com" },
