--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -2,7 +2,7 @@ version: 3
 
 tasks:
   docs:
-    cmd: sphinx-autobuild docs/ docs/_build/ --watch rtorrent_rpc --port 8920
+    cmd: sphinx-autobuild docs/ docs/_build/ --watch pypika-stubs --port 8920
 
   minor:
     cmds:
