--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,3 @@
-default_stages: [commit]
-
 repos:
   - repo: https://github.com/abravalheri/validate-pyproject
     rev: v0.20.2
@@ -7,6 +5,7 @@ repos:
       - id: validate-pyproject
         # Optional extra validations from SchemaStore:
         additional_dependencies: [ "validate-pyproject-schema-store[all]" ]
+        args: [--disable, ruff]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
